--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Sai1916.github.io/react-code-editor/",
+  "homepage": "http://Sai1916.github.io/react-code-editor/",
   "name": "react-code-editor",
   "version": "0.1.0",
   "private": true,
